feat: ✨ add refreshToken to auth flow & refactor to classes
Introduce refreshToken to the authentication flow for more secure and flexible sessions.
Also, refactor persistence of tokens and payloads from simple types to classes (AccessToken, RefreshToken, JsonWebToken) for potential future scalability and codebase maintainability. This change required a corresponding updates for the TokenManagement  methods to provide more explicit typings, as well as affect the public-facing API (OpenAPI) by introducing refreshToken.
A censor utility was also introduced to secure sensitive data for development logging.
