# apps/server/src/boundaries/identity-and-access/modules/authentication/application/authentication-controller.ts
@@ -54,6 +54,7 @@ export class AuthenticationController {
 		return {
 			id:          authenticationResult.accountId,
 			accessToken: authenticationResult.accessToken,
+			refreshToken: authenticationResult.refreshToken,
 			mfa:         false,
 		}
 	}
