# apps/server/src/boundaries/identity-and-access/modules/authentication/domain/value-objects/access-token.ts
@@ -1,62 +1,5 @@
-/**
- * Represents an access token.
- *
- * @typedef {string} AccessToken
- * @description A string that represents an access token, which is used for authentication and authorization purposes.
- */
-export type AccessToken = {
-	/**  The "iss" (issuer) claim identifies the principal that issued the
-   JWT.  The processing of this claim is generally application specific.
-   The "iss" value is a case-sensitive string containing a StringOrURI
-   value.  Use of this claim is OPTIONAL. */
-	iss?: string; /** The "sub" (subject) claim identifies the principal that is the
-   subject of the JWT.  The claims in a JWT are normally statements
-   about the subject.  The subject value MUST either be scoped to be
-   locally unique in the context of the issuer or be globally unique.
-   The processing of this claim is generally application specific.  The
-   "sub" value is a case-sensitive string containing a StringOrURI
-   value.  Use of this claim is OPTIONAL. */
-	sub?: string;
+import {JsonWebToken} from "@boundary/identity-and-access/modules/authentication/domain/value-objects/jsonwebtoken.js"
 
-	/** The "aud" (audience) claim identifies the recipients that the JWT is. */
-	aud: string;
 
-	metadata?: {
-		[key: string | "firstName" | "lastName" | "email" | "phoneNumber"]: string | undefined
-	}
 
-	/** The "exp" (expiration time) claim identifies the expiration time on
-   or after which the JWT MUST NOT be accepted for processing.  The
-   processing of the "exp" claim requires that the current date/time
-   MUST be before the expiration date/time listed in the "exp" claim.
-   Implementers MAY provide for some small leeway, usually no more than
-   a few minutes, to account for clock skew.  Its value MUST be a number
-   containing a NumericDate value.  Use of this claim is OPTIONAL. */
-	exp?: number;
-
-	/** The "nbf" (not before) claim identifies the time before which the JWT
-   MUST NOT be accepted for processing.  The processing of the "nbf"
-   claim requires that the current date/time MUST be after or equal to
-   the not-before date/time listed in the "nbf" claim.  Implementers MAY
-   provide for some small leeway, usually no more than a few minutes, to
-   account for clock skew.  Its value MUST be a number containing a
-   NumericDate value.  Use of this claim is OPTIONAL. */
-	nbf?: number;
-
-	/** The "iat" (issued at) claim identifies the time at which the JWT was
-   issued.  This claim can be used to determine the age of the JWT.  Its
-   value MUST be a number containing a NumericDate value.  Use of this
-   claim is OPTIONAL. */
-	iat?: number;
-
-	/** The "jti" (JWT ID) claim provides a unique identifier for the JWT.
-   The identifier value MUST be assigned in a manner that ensures that
-   there is a negligible probability that the same value will be
-   accidentally assigned to a different data object; if the application
-   uses multiple issuers, collisions MUST be prevented among values
-   produced by different issuers as well.  The "jti" claim can be used
-   to prevent the JWT from being replayed.  The "jti" value is a case-
-   sensitive string.  Use of this claim is OPTIONAL. */
-
-	jti?: string;
-}
+export class AccessToken extends JsonWebToken {}
