# apps/server/src/boundaries/identity-and-access/modules/authentication/services/token-management/jwt.token-management.ts
@@ -1,7 +1,9 @@
+import {JsonWebToken}               from "@boundary/identity-and-access/modules/authentication/domain/value-objects/jsonwebtoken.js"
 import {TokenManagement}            from "@boundary/identity-and-access/modules/authentication/services/token-management.js"
 import {Injectable, Logger}         from "@nestjs/common"
 import {JwtService}                 from "@nestjs/jwt"
 import {authorizationConfiguration} from "../../../../../../configs/authorization-configuration.js"
+import {censorString}               from "../../../../../../utilities/console-utils/censor-string.js"
 
 
 
@@ -17,26 +19,28 @@ export class JwtTokenManagement extends TokenManagement {
 
 	public async decodeToken(token: string): Promise<any> {
 		const decodedToken = await this.jwtService.decode(token, {complete: true})
-
-		this.logger.debug(`Decoded token ${token.slice(0, 10)}...: ${JSON.stringify(decodedToken)}`)
-
+		this.logger.debug(`Decoded token ${censorString(token)}...: ${JSON.stringify(decodedToken)}`)
 		return decodedToken
 	}
 
 
-	public async generateAccessToken(payload: any): Promise<string> {
-		const accessToken = await this.jwtService.signAsync(payload, {secret: authorizationConfiguration.jwtSecret})
+	public async signAccessToken(payload: JsonWebToken): Promise<string> {
+		payload.setExpriationTime(Date.now() + authorizationConfiguration.accessTokenExpirationTime)
 
-		this.logger.debug(`Generated access token ${accessToken.slice(0, 10)}...: ${JSON.stringify(payload)}`)
+		const accessToken = await this.jwtService.signAsync(payload.toPlainObject(), {secret: authorizationConfiguration.jwtSecret})
+
+		this.logTokenGeneration(payload, accessToken)
 
 		return accessToken
 	}
 
 
-	public async generateRefreshToken(payload: any): Promise<string> {
-		const refreshToken = await this.jwtService.signAsync(payload, {secret: authorizationConfiguration.jwtSecret})
+	public async signRefreshToken(payload: JsonWebToken): Promise<string> {
+		payload.setExpriationTime(Date.now() + authorizationConfiguration.refreshTokenExpirationTime)
 
-		this.logger.debug(`Generated refresh token ${refreshToken.slice(0, 10)}...: ${JSON.stringify(payload)}`)
+		const refreshToken = await this.jwtService.signAsync(payload.toPlainObject(), {secret: authorizationConfiguration.jwtSecret})
+
+		this.logTokenGeneration(payload, refreshToken)
 
 		return refreshToken
 	}
@@ -44,5 +48,11 @@ export class JwtTokenManagement extends TokenManagement {
 
 	public verifyToken(token: string): Promise<any> {
 		return Promise.resolve(undefined)
+	}
+
+
+	private logTokenGeneration(payload: JsonWebToken, token: string): void {
+		this.logger.debug(`Generated jsonwebtoken from provided payload ${JSON.stringify(payload)} | ${censorString(token)}`)
+		this.logger.log(`Generated jsonwebtoken with ID ${payload.jti}`)
 	}
 }
